Closed
Bug 1874533
Opened 1 year ago
Closed 1 year ago
Build warning for noreturn function on MSVC
Categories
(Core :: MFBT, defect)
Tracking
()
RESOLVED
FIXED
123 Branch
Tracking | Status | |
---|---|---|
firefox123 | --- | fixed |
People
(Reporter: mathew.hodson, Assigned: mathew.hodson)
Details
Attachments
(1 file)
92:36.64 layout/style/test
92:37.67 In file included from D:/repos/gecko-dev/layout/style/test/ListCSSProperties.cpp:11:
92:37.67 In file included from D:/repos/gecko-dev/obj-x86_64-pc-windows-msvc/dist/include\mozilla/ArrayUtils.h:14:
92:37.68 D:/repos/gecko-dev/obj-x86_64-pc-windows-msvc/dist/include\mozilla/Assertions.h(179,1): warning: function declared 'noreturn' should not return [-Winvalid-noreturn]
92:37.68 179 | }
92:37.69 | ^
92:37.69 1 warning generated.
Assignee | ||
Comment 1•1 year ago
|
||
warning: function declared 'noreturn' should not return
[-Winvalid-noreturn]
Updated•1 year ago
|
Attachment #9372683 -
Attachment description: Bug 1874533 - Fix build warning for noreturn function on MSVC. r=gsvelto → Bug 1874533 - Fix build warning for noreturn function on Windows
Pushed by archaeopteryx@coole-files.de:
https://hg.mozilla.org/integration/autoland/rev/b0cfcec88155
Fix build warning for noreturn function on Windows r=glandium
Comment 3•1 year ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 1 year ago
status-firefox123:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 123 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•