Bug 1874533 - Fix build warning for noreturn function on Windows r=glandium

warning: function declared 'noreturn' should not return
[-Winvalid-noreturn]

Differential Revision: https://phabricator.services.mozilla.com/D198485